objects/New_Student__c.object
<CustomObject>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Mentor_Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor Teacher</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Teacher__c.Subject__c</field>
                <operation>equals</operation>
                <value>Math</value>
            </filterItems>
            <filterItems>
                <field>Teacher__c.Subject__c</field>
                <operation>equals</operation>
                <value>Eng</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Students list</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMS_for_parents__c</fullName>
        <label>SMS for parents</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_of_Teacher__c</fullName>
        <label>Email of Teacher</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marks_Percentage__c</fullName>
        <label>Marks Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>